--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
+    width: 50%
 }
 
 .half-width {
     width: 50%;
-    padding-left: 2%;
+    padding-left: 5%;
 }
 
 .half-width img {
