--- a/style.css
+++ b/style.css
@@ -1,49 +1,44 @@
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
-}
-
-h1 {
-    font-size: 50px;
-
+    margin: 0%;
 }
 
 .orange-color {
     color: orange;
+
 }
 
-.flexible-container {
+
+
+section {
     display: flex;
-    width: 50%
+}
 }
 
 .half-width {
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
 }
 
 .half-width img {
-    width: 80%;
+    width: 70%;
 }
 
-.link-button {
-    text-decoration: none;
-    background-color: orange;
+
+
+
+.button-color {
     background-image: linear-gradient(orange, tomato);
-    font: weight 500px;
-    ;
-    padding: 10px 40px;
+    color: wheat;
+    padding: 10px 25px;
     border-radius: 5px;
+    text-decoration: none;
+
 
 }
 
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
-}
-
-.dream-big {
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
+    margin-left: 2px;
 }
