--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ section {
 
 
 
-.button-color {
+.link-button {
     background-image: linear-gradient(orange, tomato);
     color: wheat;
     padding: 10px 25px;
+    font-weight: 700;
     border-radius: 5px;
     text-decoration: none;
 
@@ -41,4 +42,10 @@ section {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
     margin-left: 2px;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
