--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 
 
-section {
+.flexible-container {
     display: flex;
 }
 }
@@ -48,4 +48,31 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experienc-item {
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    border-radius: 5px;
+    margin-right: 5%;
+    padding-left: 20px;
+}
+
+#full-stack {
+    border-left: 7px solid red;
+}
+
+#baby-web {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
